# mentor-concurso

./: .gitignore  .stylelintrc.json  AUDITORIA_E_PLANO_LEISECA_V2.md  PLANO_JURISPRUDENCIA_INFORMATIVOS.md  PLANO_LEI_SECA.md  PLANO_MATERIAIS_EXTRACAO.md  PLANO_MULTI_PERFIL.md  PLANO_REFORMULACAO_LEISECA.md  PLANO_TAG_TEMATICA.md  README.md  REDESIGN_STATUS.md  crono.html  gen_icon.mjs  index.html  package-lock.json  package.json  teste_estrutura.mjs  vite.config.js  wrangler.toml
cloudflare/: sync-worker.js  wrangler.toml
docs/design/: AUDITORIA_FASE4.md  MODELO_hoje_v3_refinado.html  PRINCIPIOS_REDESIGN_V3.md
src/: areas.js  bancas.js  chart-tooltip.js  chat-acoes.js  chat.js  ciclo.js  crono-entry.js  cronometro.js  erro-log.js  estrutura.js  guia.js  ia-provider.js  ia.js  icones.js  legis.js  lembretes.js  licenca.js  main.js  mapa-mental.js  marcacao.js  mm-tree.js  notificacoes.js  novidades.js  orb.js  paleta.js  pdf.js  pdfviewer.js  persistence.js  provas.js  registro-sessao.js  sm2.js  store.js  styles.css  sync-nuvem.js  sync.js  tooltip.js  ui.js  updater.js  util.js  viz.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/screens/: ajuda.js  central-revisoes.js  comecar.js  config.js  correcao.js  diagnostico.js  documentos.js  dossie.js  edital.js  erros.js  flashcards.js  foco-quiz.js  hoje.js  leiseca.js  mapas.js  mentor.js  onboarding.js  planejamento.js  pratica.js  questoes-add.js  questoes-filtro.js  resumos.js  revtopico.js  seletor-escopo.js  (+2 more)
(+10 files in other folders)
