[package]
name = "mentor-concurso"
version = "0.1.0"
description = "Mentor Concurso — app de estudo e organização para concursos"
authors = ["Felipe"]
edition = "2021"

[lib]
name = "mentor_concurso_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
machine-uid = "0.5"
base64 = "0.22"
